// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGIcon should render correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="rmd-icon rmd-icon--svg"
    focusable="false"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</div>
`;

exports[`SVGIcon should render correctly 2`] = `
<div>
  <svg
    aria-hidden="true"
    class="rmd-icon rmd-icon--svg rmd-icon--dense"
    focusable="false"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</div>
`;

exports[`SVGIcon should support the use prop 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="rmd-icon rmd-icon--svg"
    focusable="false"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="#some-sprite"
    />
  </svg>
</div>
`;
